--- a/css/main.css
+++ b/css/main.css
@@ -47,3 +47,26 @@ body{
     bottom:100px;
     right:10px;
 }
+.pull-right {
+  float: right !important;
+}
+.pull-left {
+  float: left !important;
+}
+.transition-slow{
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+}
+ .md-toggle-icon {
+    speak: none;
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+}
+.md-toggle-icon.toggled {
+    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+}
+md-card-content.md-primary{
+    background-color:rgb(0,188,212);
+    color:white;
+}
